fixed margin collapsing

--- a/css/tf.css
+++ b/css/tf.css
@@ -32,6 +32,10 @@
 	position:relative;
 }
 
+.tf-height-check {
+	overflow: auto;	
+}
+
 .tf-block-next {
 	position: absolute;
 	top: 0;	
